@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 4, 2010
+.Dd October 21, 2010
 .Dt ATF-C++-API 3
 .Os
 .Sh NAME
@@ -39,6 +39,7 @@
 .Nm ATF_REQUIRE_EQ ,
 .Nm ATF_REQUIRE_ERRNO ,
 .Nm ATF_REQUIRE_THROW ,
+.Nm ATF_REQUIRE_THROW_RE ,
 .Nm ATF_SKIP ,
 .Nm ATF_TEST_CASE ,
 .Nm ATF_TEST_CASE_BODY ,
@@ -58,6 +59,7 @@
 .Fn ATF_REQUIRE_EQ "expression_1" "expression_2"
 .Fn ATF_REQUIRE_ERRNO "exp_errno" "bool_expression"
 .Fn ATF_REQUIRE_THROW "expected_exception" "statement"
+.Fn ATF_REQUIRE_THROW_RE "expected_exception" "regexp" "statement"
 .Fn ATF_SKIP "reason"
 .Fn ATF_TEST_CASE "name"
 .Fn ATF_TEST_CASE_BODY "name"
@@ -276,6 +278,10 @@ This is the normal mode of execution.
 In this mode, any failure is reported as such to the user and the test case
 is marked as
 .Sq failed .
+.It Fn expect_race "reason"
+Any failure or timeout during the execution of the test case will be
+considered as if a race condition has been triggered and reported as such.
+If no problems arise, the test will continue execution as usual.
 .It Fn expect_signal "signo" "reason"
 Expects the test case to terminate due to the reception of a signal.
 If
@@ -308,6 +314,10 @@ the same exact value.
 .Fn ATF_REQUIRE_THROW
 takes the name of an exception and a statement and raises a failure if
 the statement does not throw the specified exception.
+.Fn ATF_REQUIRE_THROW_EQ
+takes the name of an exception, a regular expresion and a statement and raises a
+failure if the statement does not throw the specified exception and if the
+message of the exception does not match the regular expression.
 .Pp
 .Fn ATF_CHECK_ERRNO
 and
