@@ -111,6 +111,16 @@ detail::atf_tp_writer::tc_meta_data(const std::string& name,
 }
 
 // ------------------------------------------------------------------------
+// Free helper functions.
+// ------------------------------------------------------------------------
+
+bool
+detail::match(const std::string& str, const std::string& regexp)
+{
+    return atf::text::match(str, regexp);
+}
+
+// ------------------------------------------------------------------------
 // The "tc" class.
 // ------------------------------------------------------------------------
 
